--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,36 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.navbar {
+  height: 100px;
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #f1f1f1;
+}
+.navbar .top-nav {
+  width: 800px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.navbar .top-nav h1 {
+  font-size: 4rem;
+}
+.navbar .top-nav nav {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.navbar .top-nav nav a {
+  text-decoration: none;
+  color: #5E6164;
+  font-family: Ubuntu, sans-serif;
+  font-size: 1.8rem;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
