--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,8 @@
 // Mixins Here
+
+.flex(@dir,@justify:space-between, @align:center){
+    display:flex;
+    flex-direction: @dir;
+    justify-content: @justify;
+    align-items: @align;
+}
