--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation code here
+.navbar {
+    height: 100px;
+    background-color: #f6f6f6;
+    border-bottom: 1px solid #f1f1f1;
+
+    .top-nav {
+        width: 800px;
+        margin:0 auto;
+        height: 100%;
+        .flex(column, space-evenly);
+
+        h1 {
+            font-size: 4rem;
+        }
+
+        nav {
+            width: 50%;
+            .flex(row, space-around);
+
+            a {
+                text-decoration: none;
+                color: @shuttle-gray;
+                font-family:Ubuntu, sans-serif;
+                font-size: 1.8rem;
+            }
+        }
+    }
+}
