--- a/css/index.css
+++ b/css/index.css
@@ -203,6 +203,9 @@ footer {
 .home .intro h2 {
   padding: 15px;
 }
+.home .intro img {
+  border-radius: 20px;
+}
 .home .intro p {
   padding: 0 15px;
 }
