button styled with parametric mixin

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -62,6 +62,16 @@
       }
 
       .btn {
+        width: 100px;
+        padding: 10px 18px;
+        font-size: 1.8rem;
+        font-weight: bold;
+        border-radius: 5px;
+        text-align: center;
+        .cta-btn(@btn-bg-color,white);
+        &:hover {
+          background-color:orange ;
+        }
       }
     }
 
