--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,3 +6,15 @@
     justify-content: @justify;
     align-items: @align;
 }
+
+.link(@size,@color){
+    font-size:@size;
+    color:@color;
+    text-decoration: none;
+    font-family:Ubuntu, sans-serif;
+}
+
+.cta-btn(@bg:@btn-bg-color,@color) {
+    background-color: @bg;
+    color:@color;
+}
