--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,10 +19,7 @@
             .flex(row, space-around);
 
             a {
-                text-decoration: none;
-                color: @shuttle-gray;
-                font-family:Ubuntu, sans-serif;
-                font-size: 1.8rem;
+                .link(1.8rem,@shuttle-gray);
             }
         }
     }
