--- a/css/index.css
+++ b/css/index.css
@@ -185,10 +185,10 @@ p {
   align-items: center;
 }
 .navbar .top-nav nav a {
-  text-decoration: none;
-  color: #5E6164;
-  font-family: Ubuntu, sans-serif;
   font-size: 1.8rem;
+  color: #5E6164;
+  text-decoration: none;
+  font-family: Ubuntu, sans-serif;
 }
 footer {
   color: #22283B;
@@ -244,6 +244,19 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  width: 100px;
+  padding: 10px 18px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  border-radius: 5px;
+  text-align: center;
+  background-color: #22283A;
+  color: white;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: orange ;
 }
 .home .walk .walk-img {
   width: 46%;
