--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,11 @@ p {
   justify-content: space-evenly;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .navbar .top-nav {
+    width: 100%;
+  }
+}
 .navbar .top-nav h1 {
   font-size: 4rem;
 }
@@ -184,11 +189,17 @@ p {
   justify-content: space-around;
   align-items: center;
 }
+@media (max-width: 500px) {
+  .navbar .top-nav nav {
+    width: 80%;
+  }
+}
 .navbar .top-nav nav a {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   color: #5E6164;
   text-decoration: none;
   font-family: Ubuntu, sans-serif;
+  font-weight: bold;
 }
 footer {
   color: #22283B;
@@ -206,6 +217,12 @@ footer {
 .home .intro img {
   border-radius: 20px;
 }
+@media (max-width: 500px) {
+  .home .intro img {
+    width: 100%;
+    border-radius: 5px;
+  }
+}
 .home .intro p {
   padding: 0 15px;
 }
@@ -219,6 +236,17 @@ footer {
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
+}
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 90%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
 }
 .home .visit-planets {
   padding: 15px;
