--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,6 +10,10 @@
 
     img {
       border-radius: 20px;
+      @media @phone {
+        width: 100%;
+        border-radius: 5px;
+    }
     }
 
     p {
@@ -28,6 +32,14 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width: 90%;
+      }
+    }
+    @media @phone {
+      .sky, .launch {
+        display:none;
+      }
     }
   }
 
