--- a/less/home-page.less
+++ b/less/home-page.less
@@ -34,6 +34,7 @@
       height: 100%;
       @media @phone {
         width: 90%;
+        margin: 20px auto;
       }
     }
     @media @phone {
@@ -62,9 +63,18 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      width: 100%;
+      padding: 0;
+    }
     .walk-text {
       width: 50%;
 
+      @media @phone {
+        width: 100%;
+        padding: 0 15px;
+      }
       h3 {
         margin-bottom: 10px;
       }
@@ -84,17 +94,29 @@
         &:hover {
           background-color:orange ;
         }
+        @media @phone {
+          width: 100%;
+          padding: 20px;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 90%;
+        margin:20px auto;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @phone {
+          width: 100%;
+        }
       }
     }
   }
