--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,10 @@
     background-color: #f6f6f6;
     border-bottom: 1px solid #f1f1f1;
 
+    //stretch goal
+    position: fixed;
+    width: 100%;
+
     .top-nav {
         width: 800px;
         margin:0 auto;
