--- a/css/index.css
+++ b/css/index.css
@@ -167,6 +167,9 @@ p {
   position: fixed;
   width: 100%;
 }
+.navbar:hover {
+  background-color: #dee2e6;
+}
 .navbar .top-nav {
   width: 800px;
   margin: 0 auto;
@@ -330,4 +333,35 @@ footer {
   .home .walk .walk-img img {
     width: 100%;
   }
+}
+.home .subscribe-text {
+  border-top: 1px solid #dee2e6;
+  padding: 50px 60px;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+  font-family: Ubuntu;
+}
+.home .subscribe-text h3 {
+  margin-bottom: 10px;
+}
+.home .subscribe-text p {
+  margin-bottom: 26px;
+}
+.home .subscribe-text form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.home .subscribe-text form input {
+  border: 1px solid #dee2e6;
+  height: 30px;
+}
+.home .subscribe-text form button {
+  background-color: #22283A;
+  color: white;
+  padding: 8px 24px;
+  border-radius: 5px;
+  border: none;
 }
