--- a/less/home-page.less
+++ b/less/home-page.less
@@ -121,4 +121,35 @@
       }
     }
   }
+  .subscribe-text {
+    border-top: 1px solid @main-border-color;
+    padding: 50px 60px;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    font-family: Ubuntu;
+
+    h3 {
+      margin-bottom: 10px;
+    }
+
+    p {
+      margin-bottom: 26px;
+    }
+
+    form {
+      .flex(row,space-between,flex-end);
+
+      input {
+        border: 1px solid @main-border-color;
+        height: 30px;
+      }
+      button {
+        .cta-btn(@btn-bg-color,white);
+        padding: 8px 24px;
+        border-radius: 5px;
+        border:none;
+      }
+    }
+  }
 }// home
