--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,9 @@
     height: 100px;
     background-color: #f6f6f6;
     border-bottom: 1px solid #f1f1f1;
+    &:hover {
+        background-color: @border-real;
+    }
 
     //stretch goal
     position: fixed;
