Self-study questions answered + minor fixes to form section

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -128,6 +128,7 @@
     flex-direction: column;
     font-size: 1.5rem;
     font-family: Ubuntu;
+    margin-top: 20px;
 
     h3 {
       margin-bottom: 10px;
