--- a/css/index.css
+++ b/css/index.css
@@ -341,6 +341,7 @@ footer {
   flex-direction: column;
   font-size: 1.5rem;
   font-family: Ubuntu;
+  margin-top: 20px;
 }
 .home .subscribe-text h3 {
   margin-bottom: 10px;
