--- a/less/home-page.less
+++ b/less/home-page.less
@@ -94,6 +94,7 @@
         .cta-btn(@btn-bg-color,white);
         &:hover {
           background-color:orange ;
+          color: black;
         }
         @media @phone {
           width: 100%;
